<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Aieuxscope</string>
    <string name="aieuxscope">AieuxScope™</string>
    <string name="enterprise">IRISI_GROUP_3 2021</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="exemple_slogan">Choose your destination, plan your trip. \nPick the best place to your holiday</string>
    <string name="example_title_slogan">Plan Your Trip</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="task_title">Add tasks to be implemented today</string>
    <string name="title_activity_tasks">Tasks</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment" tools:ignore="MissingTranslation">Hello second fragment. Arg: %1$s</string>
    <string name="title_ifall_alert">Fall detection</string>
    <string name="supporting_text_ifall">"This application feature is built by our development team \nto help especially elderly people detect their fall and contact their SOS contacts .And to differentiate between crucial urgent moment and a deliberately throw or even a normal fall . \nThe user can set a count down when to call the emergency contact already sat. \n By accepting ,  the application will be permitted to be running in the background , which you can stop anytime .
       \nTO EDIT YOUR CONTACTS APPLY A LONG PRESS ON THE ITEM
        "</string>
    <string name="AcceloAnalyse">"This feature is a beta version "UNDER DEVELOPMENT" \nIt aims to collect data about the way you habitually walk , we recommend you to do at least 5 to 10 min walking .. and TO PUT YOUR PHONE IN A STEADY POSITION for BETTER results \nTHUS , THAT FEATURE COULD HELP YOU IN TWO WAYS :\n\n-Detect theft (in upcoming further versions)\n-Detect walk problems which is our main goal.\n\nNote that we provide you With two percentages depending on data recorded (ESTIMATION) !"</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="decline">decline</string>
    <string name="accept">accept</string>
    <string name="okay">okay</string>
    <string name="email_app">AieuxScopeCContact@gmail.com</string>
    <string name="AppName">AieuxScope</string>
    <string name="medicine_nreminder">Medicine \nReminder</string>
    <string name="my_nagenda">My\nAgenda</string>
    <string name="my_steps">My steps</string>
    <string name="i_fall">I fall</string>
    <string name="water_nreminder">Water\nReminder</string>
    <string name="my_doctor">My Doctor</string>
    <string name="hello">Hello</string>
    <string name="i_fall_title">I Fall</string>
    <string name="title_activity_customized_alert">customizedAlert</string>
    <string name="activate_feature">Activate Feature</string>
    <string name="alarmejarcupbottle2">set</string>
    <string name="alarmejarcupbottle">set my next take now!</string>
    <string name="needjar">See my needs for today</string>
    <string name="selecttime">Select time</string>
    <string name="dialog">Your Needs</string>
    <string name="cncl">Cancel</string>
    <string name="who_am_i">Who ?</string>
    <string name="run_on_background">Run on Background</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="title_who">Who ?</string>
    <string name="Servicehelp_who">"The service will proceed to be running in the background \nTo START  &amp;  \"click\" here "</string>
    <string name="startRunningSVwho">Who service</string>
    <string name="dontshow">Don\'t show again</string>
    <string name="howto"><![CDATA["We recommend you ,as your first time, to enable the feature on Forground for at least 5 -> 10 minutes , so it can store the default data .\nAs you can record as much as you want while on foreground ! "]]></string>
    <string name="more">More</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="tools">Tools</string>
    <string name="fall_detection">Fall detection</string>
    <string name="share">Share</string>
    <string name="who">Who?</string>
    <string name="about_app">About app</string>
    <string name="data_similiraty">Data %Similiraty</string>
    <string name="who_took_my_phone">Who took my phone ?</string>
    <string name="reset">Reset to default</string>
    <string name="resetdef">All data collected will be vanished by clicking \"Okay\"</string>
    <string name="contact_us">Contact us</string>
    <string name="services_used_within_the_app">Services being used within the app</string>
    <string name="sensors_movement_detection_storage_sms_n_gps_vibration_alarm">Sensors(movement detection) - Storage - SMS \n- GPS - VIBRATION - ALARM</string>
    <string name="authorizations_required">Authorizations required</string>
    <string name="check_our_website">Check our website</string>
    <string name="www_aieuxscope_com">www.aieuxscope.com</string>
    <string name="email">Email</string>
    <string name="aieuxscopeccontact_gmail_com">AieuxScopeCContact@gmail.com</string>
    <string name="gps_storage_sms_sensors_internet">GPS + STORAGE + SMS + SENSORS + INTERNET</string>
    <string name="aieuxscope_v1_0">AieuxScope v1.0</string>
    <string name="aieuxscopeCust">AieuxScope Customer</string>
    <string name="all_days">All days</string>
    <string name="confirmation">Completed the task!..</string>
    <string name="sureToMarkAsComplete">Are you sure you want to mark this task as completed.</string>
    <string name="congrats_you_have_completed_the_task_successfully">AieuxScope hopes you recovered ! Your reminder is deleted succefully!</string>
    <string name="delete_confirmation">Confirmation</string>
    <string name="sureToDelete">Are you sure you want to delete the task</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="completed">Completed</string>
    <string name="average_accelometer">%AVG acceleration</string>
    <string name="save">Data saved</string>
    <string name="permissionSen">Permission is already granted</string>
    <string name="fivesec">Will be started in 5 seconds</string>
    <string name="notenough">Not enough data</string>
    <string name="resetTodef">Reset to default</string>
    <string name="permgranted">Permission granted</string>
    <string name="experts">Experts generally recommend that you should consume at least 1.7 liters of fluid per 24 hours.\" +                         \"Which mean you need 6 takes of water today stay tuned we will remind you!</string>
    <string name="remwater">reminder dialog!</string>
    <string name="safetrack">Safe walking! We track you for safety</string>
    <string name="tryagainfall">Add at least one contact then try again</string>
    <string name="addmore">"To add more contacts PRESS \"+\" "</string>
    <string name="nocontact">No contacts yet ! add now.</string>
    <string name="addcontact">Add contact</string>
    <string name="tryagainn">Please enter again!</string>
    <string name="contadded">Contact Added</string>
    <string name="areyousuredelete">Are you sure , you want to delete this contact ?</string>
    <string name="addedsucces">You have deleted from contacts</string>
    <string name="deletecontt">Delete contact</string>
    <string name="assistelderdes">Only death can split us . Old people should never be forgotten .</string>
    <string name="addmed">Select the date , time and add medicines . An alaram  is set to remind them .</string>
    <string name="hydration">People with kidneys illness, will never  be parched again !</string>
    <string name="assisstelder">Assist elderly</string>
    <string name="addmedd">"Add medicines "</string>
    <string name="hydrtime">Hydration Time !</string>
    <string name="urgent">URGENT</string>
    <string name="my_daily_tasks">My daily tasks</string>
    <string name="todo">Todo</string>
    <string name="addTask">Add new task</string>
    <string name="welcome">Welcome</string>
    <string name="type_your_message">Type your message ...</string>
    <string name="speak_to_text">Speak to text</string>
    <string name="enter_email">Enter email ..</string>
    <string name="important">Important !</string>
    <string name="the_email_field_is_required">The email field is required</string>
    <string name="the_password_field_is_required">the password field is required</string>
    <string name="failed">Failed !</string>
    <string name="failed_to_login_try_later">Failed to login try later</string>
    <string name="already_nhave_an_naccount">Already \nhave an \nAccount?</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="wait">Wait</string>
    <string name="loading">Loading ...</string>
    <string name="choose_an_image_for_your_profile">Choose an image for your profile</string>
    <string name="registration_failed_try_later">Registration failed try later !</string>
    <string name="the_email_selected_is_already_exist">The email selected is already exist</string>
    <string name="the_name_field_is_required">The name field is required</string>
    <string name="the_phone_field_is_required">The phone field is required</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here’s\nyour first\nstep with \nus!</string>
    <string name="choose_image">Choose image</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="not_available">Not available</string>
    <string name="failed_to_retrieve_data">Failed to retrieve data !</string>
    <string name="back_to_nhome">Back to\nHome</string>
    <string name="name">Name</string>
    <string name="four_points">....</string>
    <string name="phone">Phone</string>
    <string name="account_info">Account Info</string>
    <string name="logout">Logout</string>
    <string name="ok">OK</string>
    <string name="the_email_or_password">\"the email is already exist or password selected is incorrect \"</string>
    <string name="an_error_was_occurred_try_later">\"An Error was occurred try later \"</string>
    <string name="task_title1">Task title</string>
    <string name="task_description4">Task description</string>
    <string name="categoryd">Category</string>
    <string name="addNum">Add number</string>
    <string name="senMsg">"Hey ! here is the code that will permits you create tasks for me \n code : "</string>
    <string name="messageSe">"Message sent to "</string>
    <string name="add_a_medicine">"Add medicine reminder "</string>
    <string name="fill_the_details_below_to_add_a_task_into_your_todo">Fill the details below to add your medicine</string>
    <string name="medicine_title">Medicine Name</string>
    <string name="medicine_description">Medicine description</string>
    <string name="medicine_date">which day you want to be reminded ?</string>
    <string name="alarm_time">Alarm time</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="assistance_nelderly_people">Assistance \nElderly people</string>
</resources>