<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_add_black_24dp"
            android:scaleType="centerCrop" />

        <TextView
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/add_a_medicine"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/fill_the_details_below_to_add_a_task_into_your_todo"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:textSize="18sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/medicine_title"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/addTaskTitle"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/medicine_description"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/addTaskDescription"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/medicine_date"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/taskDate"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/alarm_time"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/taskTime"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="medicine encryption"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/taskEvent"
            tools:ignore="MissingPrefix" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addTask"
            android:text="@string/add_reminder"
            android:background="@drawable/btn_background"
            android:textColor="@color/bottomNavigationBackground"
            android:layout_marginTop="40dp" />

    </LinearLayout>
</ScrollView>