<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.RegisterActivity"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/here_s_nyour_first_nstep_with_nus"
                    android:textColor="@color/whiteTextColor" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_login_img" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:startIconContentDescription="Full Name"
                        app:startIconDrawable="@drawable/ic_user">

                        <EditText
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:hint="Full Name"
                            android:inputType="textPersonName"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:startIconContentDescription="Email"
                        app:startIconDrawable="@drawable/ic_baseline_mail_outline_24">

                        <EditText
                            android:id="@+id/editTextEmailR"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_email_hint"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobile"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:startIconContentDescription="Number"
                        app:startIconDrawable="@drawable/ic_baseline_phone_iphone_24">

                        <EditText
                            android:id="@+id/editTextMobile"
                            style="@style/modifiedEditText"
                            android:hint="Mobile Number"
                            android:inputType="phone"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:endIconMode="password_toggle"
                        app:startIconContentDescription="Password"
                        app:startIconDrawable="@drawable/ic_baseline_lock_24">

                        <EditText
                            android:id="@+id/editTextPasswordR"
                            style="@style/modifiedEditText"
                            android:hint="@string/login_password_hint"
                            android:inputType="textPassword"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="30dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                            android:id="@+id/addImage"
                            style="@style/loginButton"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:layout_marginBottom="20dp"
                            android:text="@string/choose_image"
                            app:spinning_bar_color="#FFF"
                            app:spinning_bar_width="4dp" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/imagePreView"
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:src="@drawable/ic_baseline_account_box_24" />
                    </LinearLayout>

                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:text="@string/register"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />

                    <TextView
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="onLoginClick"
                        android:text="@string/already_have_an_account"
                        android:textAlignment="center"
                        android:textColor="@color/themeColor"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@string/use_other_methods"
                    android:textAlignment="center"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="12sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/whiteTextColor" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:gravity="center">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/sign_in_button"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_img"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:onClick="onLoginClick"/>
</RelativeLayout>